--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section>
         <div>
-            <h3>Le mie spese</h3>
+            <h2>Le mie spese</h2>
             <!--qui inizia la tabella-->
             <table>
                 <thead>
@@ -65,8 +65,43 @@
     </section>
     <!--qui segno le cose da fare-->
     <section>
+        <hr/>
         <div>
-            
+            <h2>Le cose da fare</h2>
+            <ul>
+                <li>visitare la tower of london &cross;</li>
+                <li>visitare GreenWich &check;</li>
+                <li>Ascoltare un artista di strada a CovenGarden &check;</li>
+                <li>Mangiare il tipico fish and chips inglese &cross;</li>
+                <hr/>
+           </ul>
+        </div>
+    </section>
+    <!--QUI CI SONO LE INFO UTILI-->
+    <section>
+        <div>
+            <h2>Info utili</h2>
+            <ol>                                                                
+                <li>Numeri utili di emergenza 
+                    <ul>
+                        <li><b>999</b> - Emergenza</li>
+                        <li><b>101</b> - Numero Polizia</li>
+                        <li><b>111</b> - Numero Assistenza Medica</li> 
+                    </ul>
+               </li>
+                <li>Hotel 
+                    <ul>
+                        <li><b>Nome Hotel:</b> Buckinghamm palace </li>
+                        <li><b>Indirizzo Hotel:</b> Weistemer,London SW1A 1AA,Regno Unito</li>
+                    </ul>
+                </li>
+                <li>Aereo 
+                    <ul>
+                        <li><b>Volo andata: Y1234X, ore 9:30 da Milano Malpensa</b></li>
+                        <li><b>Volo di ritorno: Y1236X, ore 18:30 da London Heathrow</b></li>
+                    </ul>
+                </li>
+           </ol>
         </div>
     </section>
   </body>
