--- a/index.html
+++ b/index.html
@@ -102,7 +102,17 @@
                     </ul>
                 </li>
            </ol>
+           <hr/>
         </div>
     </section>
+    <!--la parte finale del es.-->
+    <section>
+        <div>
+            <h2>Le foto</h2>
+            <img src="./images/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg" alt="images/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg">
+            <img src="./images/london-400x400-compressor_0.jpg" alt="images/london-400x400-compressor_0.jpg">
+        </div>
+    </section>
+
   </body>
 </html>
